feat: create via cep service

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-BACK4APP_BASE_URL=
+VIACEP_BASE_URL=https://viacep.com.br/ws
+BACK4APP_BASE_URL=https://parseapi.back4app.com/classes
 BACK4APP_API_ID=
 BACK4APP_API_KEY=
